# PrettyLex

./: CMakeLists.txt
io/: input.txt  output.txt
lex/: lexer.l
libs/lib4aio/: CMakeLists.txt
libs/lib4aio/common/: common.c  common.h
libs/lib4aio/str_builder/: str_builder.c  str_builder.h
main/: header.h  lexer.h  main.c  myscanner.c
